<resources>
    <string name="app_name">TimO</string>
    <string name="attendance">Attendance</string>
    <string name="absence">Absence</string>
    <string name="project">Project</string>
    <string name="info">Info</string>
    <string name="open_settings">Open Settings</string>
    <string name="timo_logo">TimO Logo</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="rfid_card">RFID-Card</string>
    <string name="wait_for_ident">Waiting for identification …</string>
    <string name="choose_worker">Choose an employee</string>
    <string name="warning">Warning</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="language">Language</string>
    <string name="timezone">Timezone</string>
    <string name="please_enter_timo_login_data">Please enter TimO login data for terminal configuration</string>
    <string name="english">English</string>
    <string name="deutsch">German</string>
    <string name="login">Login</string>
    <string name="save_settings">Save Settings</string>
    <string name="save">Save</string>
    <string name="wilkommen_bei_timo">Welcome to Time Management Office</string>
    <string name="info_intial_ethernet_settigns">Could not access internet\nPlease verify settings.</string>
    <string name="ethernet_settings">Ethernet Settings</string>
    <string name="mobile_network_settings">Mobile Network Settings</string>
    <string name="wifi_settings">Wifi Settings</string>
    <string name="retry">Retry</string>
    <string name="user_passcode">Pin Code</string>
    <string name="timo_login_name">Login Name</string>
    <string name="company">Company</string>
    <string name="loginname" translatable="false">Loginname</string>
    <string name="password">Password</string>
    <string name="timo_service_not_reachable">TimO service is not reachable!</string>
    <string name="company_does_not_exists_or_is_wrong">Company does not exist or company name is wrong!</string>
    <string name="wrong_login_data">Login data is wrong!</string>
    <string name="fill_out_fields">Please fill in all fields!</string>
    <string name="account_locked">Account locked!</string>
    <string name="please_choose_language_and_timezone">Please choose language and timezone</string>
    <string name="rfid">RFID</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="enter_url_for_connection">Enter the URL of the TimO system that should be used for the connection.</string>
    <string name="invalid_value">Invalid value</string>
    <string name="please_wait">Please wait, automatic login can take some time.</string>
    <string name="timeout_second">Showing time of booking mask in seconds</string>
    <string name="dark_screen_saver">Dark Screen Saver without Animation</string>
    <string name="animated_screen_saver">Animated Screen Saver</string>
    <string name="volume">Volume:</string>
    <string name="screen_saver">Screen Saver</string>
    <string name="pin">Pin:</string>
    <string name="next">Next</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="hours">Hours</string>
    <string name="orderNo">Order no.</string>
    <string name="units">Units</string>
    <string name="task">Task</string>
    <string name="customer">Customer</string>
    <string name="team">Team</string>
    <string name="ticket">Ticket</string>
    <string name="activityType">Activity Type</string>
    <string name="activityTypeMatrix">Activity Type Matrix</string>
    <string name="skill">Skill</string>
    <string name="description">Description</string>
    <string name="placeOfWork">Place of work</string>
    <string name="journey">Journey</string>
    <string name="travelTime">Travel time</string>
    <string name="traveldKm">km</string>
    <string name="kmAllowance">km blan.</string>
    <string name="estimation">Estimation</string>
    <string name="billable">Billable</string>
    <string name="premiumable">Premiumable</string>
    <string name="ignoreTimedBreaks">Ignore Timed Breaks</string>
    <string name="manDays">Man-day</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="employee">Employee</string>
    <string name="filter">Filter</string>
    <string name="search_text">Search Text</string>
    <string name="date_range">Date Range</string>
    <string name="absence_type">Absence type</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>