<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    tools:context=".fragmentViews.LoginFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/go_to_inet_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:src="@drawable/baseline_wifi_24"
        android:layout_marginBottom="60dp"/>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginBottom="80dp"
        android:text="@string/save"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/custom_url"
        android:layout_width="500dp"
        android:layout_height="48dp"
        android:hint="local Url"
        tools:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Has to be removed later to use as url for local test" />

    <LinearLayout
        android:id="@+id/linear_input_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_login_company"
            android:layout_width="600dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:hint="Company"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/text_input_layout_login_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_login_company"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textSize="40dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_login_user"
            android:layout_width="600dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:hint="Loginname"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/text_input_layout_login_password"
            app:layout_constraintStart_toStartOf="@id/text_input_layout_login_company">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_login_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textSize="40dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_login_password"
            android:layout_width="600dp"
            android:layout_height="100dp"
            android:layout_marginBottom="100dp"
            android:hint="Password"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/button_submit"
            app:layout_constraintStart_toStartOf="@id/text_input_layout_login_user"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textSize="40dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_menu_layout_language"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="600dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/language"
            app:layout_constraintBottom_toTopOf="@id/text_input_layout_login_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <AutoCompleteTextView
                android:id="@+id/dropdown_menu_language"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:imeOptions="actionDone"

                android:textSize="40sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_menu_layout_timezone"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="600dp"
            android:layout_height="100dp"
            android:hint="@string/timezone"
            app:layout_constraintBottom_toTopOf="@id/text_input_layout_login_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/dropdown_menu_timezone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dropDownWidth="800dp"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:textSize="40sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_title_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/please_enter_timo_login_data"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>